# python_autogui_screen

./: autoscreen.py  test.py
automation/: first_test.py  google_test.py  test_multiple.py
my_project/: pyproject.toml
